few more changes and bug fixes

--- a/templates/pdfgen/index.html
+++ b/templates/pdfgen/index.html
@@ -360,7 +360,7 @@
                             <div id="sTechSkills">
                                 <div class="column-title">
                                     <h2>Technical Skills</h2>
-                                    Add superscript * to mention elementary proficiency and ^ for high proficiency.<hr>
+                                    Add superscript * to mention elementary proficiency.<hr>
                                 </div>
                             </div>
                         </div>
