--- a/templates/pdfgen/results.html
+++ b/templates/pdfgen/results.html
@@ -40,6 +40,7 @@
         <h1 id="top-header">Thank you for preferring us :)</h1>
         <!-- Header of the html page ***********-->
         <h2>Here are your results!</h2>
+        <a href = "{% static 'data/datafile.txt' %}" download>download</a> the data file
         
         <!-- main content of the html page ************-->
         <main>
