added outlook authentication

--- a/templates/pdfgen/index.html
+++ b/templates/pdfgen/index.html
@@ -97,6 +97,9 @@
                 fr.readAsText(this.files[0]);
             })
         </script>
+
+        <br>
+        <a href = '{% url "django_auth_adfs:logout" %}'>Logout</a></a>
         
         
         
