added oulook authentication and modified admin page whereever necessary..

--- a/templates/pdfgen/results.html
+++ b/templates/pdfgen/results.html
@@ -48,7 +48,8 @@
 
             <div id = "pdf1" class="col-12 p-5">
                 <embed src="{% static 'pdfs/latexFile.pdf' %}" type="application/pdf" width="100%" height="100%">&nbsp;</embed>
-            </div>   
+            </div>  
+        </main> 
         <!-- Footer *************-->
         <footer>
 
