modifed the models, dynammic inputs are enabled. There is a new problem in taking few inputs..

--- a/templates/pdfgen/home.html
+++ b/templates/pdfgen/home.html
@@ -40,6 +40,7 @@
        
         <!-- main content of the html page ************-->
         <main>
+            <a href = '{% url "django_auth_adfs:logout" %}'>Logout</a><br>
             <div class="row">
                 <div class="col-md-4">
 
