--- a/templates/pdfgen/index.html
+++ b/templates/pdfgen/index.html
@@ -365,7 +365,7 @@
                             </div-->
                             
 
-                            <!-- First load the elements in the experience list and then give flexibility-->>
+                            <!-- First load the elements in the experience list and then give flexibility-->
                             {% for expitem in exp_list %}
                             <div class= "{{expitem.exp_string}}" >
                                 <div class="form-row">
