--- a/templates/pdfgen/results.html
+++ b/templates/pdfgen/results.html
@@ -42,17 +42,22 @@
         <!-- Header of the html page ***********-->
         <h2>Here are your results!</h2>
         
-        <a href = "{% static 'data/datafile.txt' %}" download>download</a> the data file<br>
-        <a href = '{% url "django_auth_adfs:logout" %}'>Logout</a></a>
+        <!--a href = "{% static 'data/datafile.txt' %}" download>download</a> the data file<br-->
+        <a href = '{% url "django_auth_adfs:logout" %}'>Logout</a>
 
         
         
         <!-- main content of the html page ************-->
         <main>
 
+            <h2>
+                Dowload the latex file <a href = '{% static latex_loc %}' download>here</a>
+            </h2>
+            <hr>            
             <div id = "pdf1" class="col-12 p-5">
-                <embed src="{% static 'pdfs/latexFile.pdf' %}" type="application/pdf" width="100%" height="100%">&nbsp;</embed>
-            </div>  
+                <embed src="{% static pdf_loc %}" type="application/pdf" width="100%" height="100%">&nbsp;</embed>
+            </div>
+            <hr>
         </main> 
         <!-- Footer *************-->
         <footer>
