delete operation for resumes added.

--- a/templates/pdfgen/index.html
+++ b/templates/pdfgen/index.html
@@ -95,7 +95,13 @@
         </script-->
 
         <br>
-        <a href='{% url "django_auth_adfs:logout" %}'>Logout</a>
+        <div class="row">
+            <div class="col-10"></div>
+            <div class = "col-2">
+                <button type="button" class="btn btn-success"><a href = '{% url "django_auth_adfs:logout" %}' style = "color: antiquewhite;">Logout</a></button>
+            </div>
+        </div>
+        
 
         <section class="container">
             <div class="container-fluid">
