--- a/templates/pdfgen/results.html
+++ b/templates/pdfgen/results.html
@@ -43,8 +43,15 @@
         <h2>Here are your results!</h2>
         
         <!--a href = "{% static 'data/datafile.txt' %}" download>download</a> the data file<br-->
-        <a href = '{% url "django_auth_adfs:logout" %}'>Logout</a>
+      
 
+        <div class="row">
+            <div class="col-10"></div>
+            <div class = "col-2">
+                <button type="button" class="btn btn-success"><a href = '{% url "django_auth_adfs:logout" %}' style = "color: antiquewhite;">Logout</a></button>
+            </div>
+        </div>
+        
         
         
         <!-- main content of the html page ************-->
