resume generation updated

--- a/templates/pdfgen/home.html
+++ b/templates/pdfgen/home.html
@@ -48,7 +48,7 @@
             }
         </script>
     </head>
-    <body style=" background-color: darkslategray;">
+    <body style=" background-color: #00140e;">
        
         <!-- main content of the html page ************-->
         <main>
