--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -241,11 +241,11 @@
                         <div class="flex pt-10 pr-6 relative items-center bg-transparent border-b border-purple-500 py-2">
                         <input id = "temp_name" required class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none" type="text" placeholder="Resume name" aria-label="Full name">
                         
-                        <button class="bg-purple-500 hover:bg-purple-900 text-white  py-1 px-2 rounded"
+                        <button class="bg-purple-500 hover:bg-purple-900 text-white  py-1 px-2 rounded focus:outline-none focus:ring-2 focus:ring-purple-400 focus:ring-opacity-20"
                         type = "button" onclick="create_new_resume()">
                             Create
                         </button>
-                        <button  class="bg-gray-50  text-gray-500 hover:bg-gray-200 py-1 px-2 rounded" 
+                        <button  class="bg-gray-50  text-gray-500 hover:bg-gray-200 py-1 px-2 rounded focus:outline-none focus:ring-2 focus:ring-purple-400 focus:ring-opacity-20" 
                         type="button" onclick = "stop_new_resume()">
                             Cancel
                         </button>
